--- a/chrome/browser/resources/settings/settings.html
+++ b/chrome/browser/resources/settings/settings.html
@@ -57,7 +57,7 @@
       <div id="appeal" hidden="[[appealClosed_]]">
         <span id="request">
           <h1>Please read: A personal appeal from the Chrome settings team.</h1>
-          <a href="https://goo.gl/gRBbFv">Please file bugs</a>
+          <a href="https://goo.gl/btju6c">Please file bugs</a>
           before you
           <a href="chrome://settings-frame">go back to the old settings</a>.
         </span>
