Run clang-format on ui/webui/resources
This is in preparation of:
- turning down closure_linter
- turning on CheckPatchFormatted in the PRESUBMIT

This was done with:

  $ find ui/webui/resources -type f -name '*.js' | xargs clang-format -i

R=dpapad@chromium.org, stevenjb@chromium.org
BUG=567770
NOPRESUBMIT=true  # existing deprecated JS
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2597013002 .

--- a/chrome/browser/resources/md_history/lazy_load.vulcanized.html
+++ b/chrome/browser/resources/md_history/lazy_load.vulcanized.html
@@ -245,6 +245,8 @@ history-item {
 </style>
   </template>
 </dom-module>
+
+
 <dom-module id="paper-button" assetpath="chrome://resources/polymer/v1_0/paper-button/" css-build="shadow">
   <template strip-whitespace="">
     <style scope="paper-button">:host {
@@ -364,7 +366,7 @@ paper-ripple {
 }
 
 :host([disabled]), .paper-item[disabled] {
-  color: var(--paper-item-disabled-color,var(--disabled-text-color));
+  color: var(--paper-item-disabled-color,var(--disabled-text-color));;
 
         ;
 }
@@ -390,6 +392,8 @@ paper-ripple {
 </style>
   </template>
 </dom-module>
+
+
 <dom-module id="paper-item" assetpath="chrome://resources/polymer/v1_0/paper-item/" css-build="shadow">
   <template>
     
@@ -420,7 +424,7 @@ paper-ripple {
 }
 
 :host([disabled]), .paper-item[disabled] {
-  color: var(--paper-item-disabled-color,var(--disabled-text-color));
+  color: var(--paper-item-disabled-color,var(--disabled-text-color));;
 
         ;
 }
@@ -1242,7 +1246,7 @@ paper-icon-button.subpage-arrow {
 }
 
 paper-ripple {
-  color: var(--paper-tab-ink,var(--paper-yellow-a100));
+  color: var(--paper-tab-ink,var(--paper-yellow-a100));;
 }
 
 .tab-content > ::content > a {
@@ -1265,6 +1269,8 @@ paper-ripple {
 <g id="chevron-right"><path d="M10 6L8.59 7.41 13.17 12l-4.58 4.59L10 18l6-6z"></path></g>
 </defs></svg>
 </iron-iconset-svg>
+
+
 <dom-module id="paper-tabs" assetpath="chrome://resources/polymer/v1_0/paper-tabs/" css-build="shadow">
   <template>
     <style scope="paper-tabs">:host {
@@ -1347,7 +1353,7 @@ paper-icon-button {
         bottom: 0;
         left: 0;
         right: 0;
-        background-color: var(--paper-tabs-selection-bar-color,var(--paper-yellow-a100));
+        background-color: var(--paper-tabs-selection-bar-color,var(--paper-yellow-a100));;
           -webkit-transform: scale(0);
         transform: scale(0);
           -webkit-transform-origin: left center;
