[MD settings] spelling typo changes in settings internet
This CL touches up some typos, mostly in the settings internet code. Not
a big deal, but I wanted something low risk yet helpful to do late on a
Friday.

TBR=stevenjb@chromium.org
(code health)
Bug: None
Change-Id: I76616bc258d9fb92323d37c57341de2575ee72d8

--- a/chrome/browser/resources/settings/internet_page/network_property_list.html
+++ b/chrome/browser/resources/settings/internet_page/network_property_list.html
@@ -33,7 +33,7 @@
     <template is="dom-repeat" items="[[fields]]"
         filter="[[computeFilter_(prefix, propertyDict, editFieldTypes)]]">
       <div class="settings-box single-column two-line">
-        <!-- Propety label -->
+        <!-- Property label -->
         <div>[[getPropertyLabel_(item, prefix)]]</div>
         <!-- Uneditable property value -->
         <div class="layout horizontal"
