--- a/chrome/browser/resources/settings/site_settings/zoom_levels.html
+++ b/chrome/browser/resources/settings/site_settings/zoom_levels.html
@@ -25,8 +25,10 @@
       }
     </style>
     <div class="list-frame vertical-list" id="listContainer">
-      <template is="dom-repeat" items="[[sites_]]" id="list">
-        <div class="list-item">
+      <iron-list id="list" items="[[sites_]]" preserve-focus
+          scroll-target="[[subpageScrollTarget]]">
+        <template>
+          <div class="list-item">
           <div class="favicon-image"
               style$="[[computeSiteIcon(item.originForFavicon)]]">
           </div>
@@ -36,11 +38,12 @@
           <div class="zoom-label">[[item.zoom]]</div>
           <div>
             <button is="paper-icon-button-light" class="icon-clear"
-                on-tap="removeZoomLevel_"
+                on-tap="removeZoomLevel_" tabindex$="[[tabIndex]]"
                 title="$i18n{siteSettingsRemoveZoomLevel}"></button>
           </div>
         </div>
-      </template>
+        </template>
+      </iron-list>
       <template is="dom-if" if="[[!sites_.length]]">
         <div id="empty">
           $i18n{siteSettingsNoZoomedSites}
