MD Settings + Extensions: unify no-search-result styling.
Bug: 754141
Change-Id: I2601fe7dfc52a4e1e9a4f071f04e8b7152f92c0b

--- a/chrome/browser/resources/md_extensions/item_list.html
+++ b/chrome/browser/resources/md_extensions/item_list.html
@@ -19,12 +19,11 @@
       }
 
       .empty-list-message {
-        align-items: center;
         color: #6e6e6e;
-        display: flex;
-        flex: 1;
+        font-size: 120%;
         font-weight: 500;
-        justify-content: center;
+        margin-top: 80px;
+        text-align: center;
       }
 
       .wrapper {
