--- a/chrome/browser/resources/settings/settings_main/settings_main.html
+++ b/chrome/browser/resources/settings/settings_main/settings_main.html
@@ -26,10 +26,8 @@
       }
 
       #noSearchResults {
-        align-items: center;
-        display: flex;
-        flex-direction: column;
         margin-top: 80px;
+        text-align: center;
       }
 
       #noSearchResults div:first-child {
