--- a/chrome/browser/resources/settings/site_settings/site_list.html
+++ b/chrome/browser/resources/settings/site_settings/site_list.html
@@ -7,6 +7,7 @@
 <link rel="import" href="chrome://resources/cr_elements/policy/cr_policy_pref_indicator.html">
 <link rel="import" href="chrome://resources/html/web_ui_listener_behavior.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/iron-icon/iron-icon.html">
+<link rel="import" href="chrome://resources/polymer/v1_0/iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="chrome://resources/polymer/v1_0/paper-icon-button/paper-icon-button-light.html">
 <link rel="import" href="../i18n_setup.html">
 <link rel="import" href="../icons.html">
@@ -58,28 +59,26 @@
       </div>
       <div class="list-frame menu-content vertical-list" id="listContainer">
         <template is="dom-repeat" items="[[sites]]">
-          <div class="list-item">
-            <div class="settings-row wide"
-                actionable$="[[enableSiteSettings_]]" on-tap="onOriginTap_">
-              <div class="favicon-image"
-                  style$="[[computeSiteIcon(item.origin)]]">
-              </div>
-              <div class="middle no-min-width">
-                <div class="text-elide">[[item.displayName]]</div>
-
-                <!-- This div must not contain extra whitespace. -->
-                <div class="secondary text-elide"
-                    id="siteDescription">[[computeSiteDescription_(item)]]</div>
-              </div>
-              <template is="dom-if" if="[[enableSiteSettings_]]">
-                <div on-tap="onOriginTap_" actionable>
-                  <button class="subpage-arrow" is="paper-icon-button-light"
-                      aria-label$="[[item.displayName]]"
-                      aria-describedby="siteDescription"></button>
-                </div>
-                <div class="separator"></div>
-              </template>
+          <div class="list-item" actionable$="[[enableSiteSettings_]]"
+              on-tap="onOriginTap_">
+            <div class="favicon-image"
+                style$="[[computeSiteIcon(item.origin)]]">
             </div>
+            <div class="middle no-min-width">
+              <div class="text-elide">[[item.displayName]]</div>
+
+              <!-- This div must not contain extra whitespace. -->
+              <div class="secondary text-elide"
+                  id="siteDescription">[[computeSiteDescription_(item)]]</div>
+            </div>
+            <template is="dom-if" if="[[enableSiteSettings_]]">
+              <div on-tap="onOriginTap_" actionable>
+                <button class="subpage-arrow" is="paper-icon-button-light"
+                    aria-label$="[[item.displayName]]"
+                    aria-describedby="siteDescription"></button>
+              </div>
+              <div class="separator"></div>
+            </template>
             <template is="dom-if" if="[[item.controlledBy]]">
               <cr-policy-pref-indicator pref="[[item]]"
                   icon-aria-label="[[label]]">
