--- a/content/test/data/device_sensors/device_orientation_test.html
+++ b/content/test/data/device_sensors/device_orientation_test.html
@@ -8,7 +8,8 @@
         // Return true iff the orientation is close enough to (1, 2, 3).
         return Math.abs(event.alpha - 1) < 0.01 &&
                Math.abs(event.beta  - 2) < 0.01 &&
-               Math.abs(event.gamma - 3) < 0.01;
+               Math.abs(event.gamma - 3) < 0.01 &&
+               event.absolute == false;
       }
 
       function onOrientation(event) {
