chromeos: Hide status from power settings when no battery.
Hide the battery status row from the power device settings
subpage when no battery is present (e.g. on a Chromebox). We
used to handle this by hiding the entire subpage when a
dual-role Type-C port wasn't present, but that behavior went
away when power settings were added.

Bug: 766828
Change-Id: Ia176bf4ea318db050b41c0b62e539d2fb704648a

--- a/chrome/browser/resources/settings/device_page/power.html
+++ b/chrome/browser/resources/settings/device_page/power.html
@@ -12,7 +12,8 @@
 <dom-module id="settings-power">
   <template>
     <style include="settings-shared md-select"></style>
-    <div id="powerSourceRow" class="settings-box first two-line">
+    <div id="powerSourceRow" class="settings-box first two-line"
+        hidden$="[[!batteryStatus_.present]]">
       <div class="start">
         <div>[[powerSourceLabel_]]</div>
         <div class="secondary">[[batteryStatus_.statusText]]</div>
