--- a/chrome/browser/resources/interventions_internals/index.html
+++ b/chrome/browser/resources/interventions_internals/index.html
@@ -24,6 +24,10 @@
         <input type="radio" id="logs" name="tabs" value="message-logs">
         <span>Logs</span>
       </label>
+      <label>
+        <input type="radio" id="blacklist" name="tabs" value="blacklist-status">
+        <span>Blacklist Status</span>
+      </label>
     </nav>
 
     <div class="tab-content" id="previews-statuses">
@@ -38,6 +42,23 @@
           <th id="type-table-header">Type</th>
           <th id="description-table-header">Description</th>
           <th id="url-table-header">URL</th>
+        </tr>
+      </table>
+    </div>
+
+    <div class="tab-content" id="blacklist-status">
+      <div id="user-blacklisted-status">
+        User blacklisted status: N/A
+      </div>
+
+      <div id="blacklist-cleared-status">
+        Last blacklist cleared: N/A
+      </div>
+
+      <table id="blacklisted-hosts-table">
+        <tr>
+          <th id="blacklisted-host-header">Blacklisted host</th>
+          <th id="blacklisted-time-header">Time</th>
         </tr>
       </table>
     </div>
