[Offline pages][Internals] Update internal page download so it displays the JSON in a text area rather than attempting to initiate download via data url
Data urls are disabled from top-level navigations as of Chrome 60

Bug: 775599
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I6a66eaf19f005cbf75640db146ea4ca4acf26277

--- a/chrome/browser/resources/offline_pages/offline_internals.html
+++ b/chrome/browser/resources/offline_pages/offline_internals.html
@@ -131,5 +131,9 @@
       </div>
     </div>
     <div id="prefetch-actions-info" class="dump"></div>
+    <div id="dump">
+      <textarea id="dump-box" name="json-box" rows="10" cols="40" readonly></textarea>
+      <button id="close-download">Close</button>
+    </div>
   </body>
 </html>
