--- a/chrome/browser/resources/settings/internet_page/internet_config.html
+++ b/chrome/browser/resources/settings/internet_page/internet_config.html
@@ -33,7 +33,7 @@
               enable-connect="{{enableConnect_}}" enable-save="{{enableSave_}}"
               share-allow-enable="[[shareAllowEnable_]]"
               share-default="[[shareDefault_]]"
-              on-close="close_">
+              on-close="close">
           </network-config>
         </div>
       </div>
