MD Extensions: Remove focus line on mousedown in error console
Bug:772571
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ica306dc6872da03a109ae5edba58065aeec39f45

--- a/chrome/browser/resources/md_extensions/error_page.html
+++ b/chrome/browser/resources/md_extensions/error_page.html
@@ -166,8 +166,9 @@
             <template is="dom-repeat" items="[[calculateShownItems_(data.*)]]">
               <div class="item-container">
                 <div class$="error-item [[computeErrorClass_(selectedError_, item)]]">
-                  <div class="start" on-tap="onErrorItemAction_"
-                      on-keydown="onErrorItemAction_" tabindex="0">
+                  <div class="start" on-mousedown="onErrorItemAction_"
+                      on-tap="onErrorItemAction_" on-keydown="onErrorItemAction_"
+                      tabIndex="0">
                     <iron-icon icon$="[[computeErrorIcon_(item)]]"></iron-icon>
                     <div class="error-message">[[item.message]]</div>
                     <cr-expand-button hidden="[[!computeIsRuntimeError_(item)]]"
