Network config dialogs: UX feedback
Changes (from issue 380937):

>>> For in-settings dialogs:

- dialog style:
-- Icon removed from titles.
-- Title font in stand alone dialog fixed (embedded dialog should already match)
-- Padding changed to 16px to match other dialogs.
-- Adjusted control heights to 58px, same as 'Add search engine'
- The controls in previous mocks did not stretch to fit, I changed them to be flex.

>>> For in-OS dialog

-- Dialog title removed
-- Dialog width fixed

Bug: 380937, 780710
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I2068a9eefed9410e398b08966e89916220e74890

--- a/chrome/browser/resources/settings/internet_page/internet_config.html
+++ b/chrome/browser/resources/settings/internet_page/internet_config.html
@@ -1,7 +1,6 @@
 <link rel="import" href="chrome://resources/html/polymer.html">
 
 <link rel="import" href="chrome://resources/cr_components/chromeos/network/network_config.html">
-<link rel="import" href="chrome://resources/cr_elements/chromeos/network/cr_network_icon.html">
 <link rel="import" href="chrome://resources/cr_elements/chromeos/network/cr_onc_types.html">
 <link rel="import" href="chrome://resources/cr_elements/cr_dialog/cr_dialog.html">
 <link rel="import" href="chrome://resources/html/i18n_behavior.html">
@@ -18,31 +17,23 @@
     </style>
 
     <dialog is="cr-dialog" id="dialog" close-text="$i18n{close}">
-      <div slot="title">
-        <div class="layout horizontal center">
-          <cr-network-icon network-state="[[networkProperties_]]" is-list-item>
-          </cr-network-icon>
-          <div class="title">[[getDialogTitle_(networkProperties_)]]</div>
-        </div>
-      </div>
+      <div slot="title">[[getDialogTitle_(networkProperties_)]]</div>
       <div slot="body">
-        <div class="settings-box first">
-          <network-config id="networkConfig" class="flex"
-              networking-private="[[networkingPrivate]]"
-              network-properties="{{networkProperties_}}"
-              enable-connect="{{enableConnect_}}" enable-save="{{enableSave_}}"
-              share-allow-enable="[[shareAllowEnable_]]"
-              share-default="[[shareDefault_]]"
-              on-close="close_">
-          </network-config>
-        </div>
+        <network-config id="networkConfig" class="flex"
+            networking-private="[[networkingPrivate]]"
+            network-properties="{{networkProperties_}}"
+            enable-connect="{{enableConnect_}}" enable-save="{{enableSave_}}"
+            share-allow-enable="[[shareAllowEnable_]]"
+            share-default="[[shareDefault_]]"
+            on-close="close_">
+        </network-config>
       </div>
 
       <div slot="button-container">
         <paper-button class="cancel-button" on-tap="onCancelTap_">
           $i18n{cancel}
         </paper-button>
-        <paper-button class="primary-button" on-tap="onSaveOrConnectTap_"
+        <paper-button class="action-button" on-tap="onSaveOrConnectTap_"
             disabled="[[!getSaveOrConnectEnabled_(
                 guid, networkProperties_, enableSave_, enableConnect_)]]">
           [[getSaveOrConnectLabel_(guid, networkProperties_)]]
