--- a/chrome/browser/resources/settings/reset_page/reset_page.html
+++ b/chrome/browser/resources/settings/reset_page/reset_page.html
@@ -36,7 +36,7 @@
               class="subpage-arrow" aria-label="$i18n{resetPageTitle}"
               aria-describedby="resetProfileSecondary"></button>
         </div>
-        <template is="dom-if" if="[[showResetProfileDialog_]]" restamp>
+        <template is="cr-lazy-render" id="resetProfileDialog">
           <settings-reset-profile-dialog on-close="onResetProfileDialogClose_">
           </settings-reset-profile-dialog>
         </template>
