Print Preview Componentization: Add Advanced and Destinations settings
Do not add dialogs (buttons do not work). Dummy version of
destination loading animation, changes from spinner to destination
name and icon 5 seconds after load.

Bug: 773928
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I3359ec6e9b1687c7c56e1ef2bd454842aa90fe6c

--- a/chrome/browser/resources/print_preview/new/print_preview_shared_css.html
+++ b/chrome/browser/resources/print_preview/new/print_preview_shared_css.html
@@ -4,9 +4,21 @@
 <dom-module id="print-preview-shared">
   <template>
     <style>
+      [hidden] {
+        display: none !important;
+      }
+
       h1 {
         line-height: 1;
         user-select: none;
+      }
+
+      :host .multirow span {
+        --settings-section-title-style: {
+          /* Override so label is always aligned with top element on right */
+          padding-top: 13px;
+          vertical-align: top;
+        }
       }
 
       /* Default state ********************************************************/
