--- a/chrome/browser/resources/print_preview/new/number_settings_section.html
+++ b/chrome/browser/resources/print_preview/new/number_settings_section.html
@@ -19,7 +19,7 @@
         width: 100%;
       }
     </style>
-    <print-preview-settings-section class="input-settings-section">
+    <print-preview-settings-section class="input-settings-section multirow">
       <span slot="title" id="section-title">[[inputLabel]]</span>
       <div slot="controls">
         <slot name="opt-outside-content"></slot>
