--- a/chrome/browser/resources/print_preview/new/other_options_settings.html
+++ b/chrome/browser/resources/print_preview/new/other_options_settings.html
@@ -1,15 +1,14 @@
 <link rel="import" href="chrome://resources/html/polymer.html">
 
 <link rel="import" href="checkbox_radio_css.html">
-<link rel="import" href="input_css.html">
 <link rel="import" href="print_preview_shared_css.html">
 <link rel="import" href="settings_section.html">
 
 <dom-module id="print-preview-other-options-settings">
   <template>
-    <style include="print-preview-shared checkbox-radio input">
+    <style include="print-preview-shared checkbox-radio">
     </style>
-    <print-preview-settings-section class="input-settings-section">
+    <print-preview-settings-section class="multirow">
       <span slot="title" id="options-label">$i18n{optionsLabel}</span>
       <div slot="controls" class="checkbox">
         <div id="header-footer-container">
