--- a/chrome/browser/resources/print_preview/new/pages_settings.html
+++ b/chrome/browser/resources/print_preview/new/pages_settings.html
@@ -15,7 +15,7 @@
         width: 100%;
       }
     </style>
-    <print-preview-settings-section class="input-settings-section">
+    <print-preview-settings-section class="input-settings-section multirow">
       <span slot="title">$i18n{pagesLabel}</span>
       <div slot="controls">
         <div class="radio">
