--- a/chrome/browser/resources/print_preview/new/input_css.html
+++ b/chrome/browser/resources/print_preview/new/input_css.html
@@ -5,19 +5,24 @@
     <style>
       .input-settings-section {
         --error-text-color: rgb(140, 20, 20);
+
+        --invalid-input-style: {
+          background: rgb(255, 240, 240);
+          color: var(--error-text-color);
+        }
       }
 
       :host .input-settings-section span {
         --settings-section-title-style: {
           /* Override so label is always aligned with top element on right */
-          padding-top: 13px;
-          vertical-align: top;
+          /*padding-top: 13px;
+          vertical-align: top;*/
         }
       }
 
-      input:invalid {
-        background: rgb(255, 240, 240);
-        color: var(--error-text-color);
+      input:invalid,
+      :host .input-settings-section input.invalid {
+        @apply --invalid-input-style;
       }
 
       span.hint {
