--- a/chrome/browser/resources/print_preview/new/settings_section.html
+++ b/chrome/browser/resources/print_preview/new/settings_section.html
@@ -4,30 +4,22 @@
   <template>
     <style>
       :host {
-        display: table-row;
+        align-items: flex-start;
+        display: flex;
+        margin-top: 10px;
+        padding: 5px 20px;
       }
 
       ::slotted([slot=controls]) {
-        -webkit-padding-end: 20px;
-        display: table-cell;
-        padding-bottom: 5px;
-        padding-top: 5px;
-        width: 99%;
+        flex: 2;
       }
 
       ::slotted([slot=title]) {
-        -webkit-padding-end: 20px;
-        -webkit-padding-start: 20px;
         color: #646464;
-        display: table-cell;
+        flex: 1;
         font-size: 1em;
-        margin-bottom: 0;
-        margin-top: 0;
         min-width: 70px;
-        padding-bottom: 5px;
         padding-top: 5px;
-        vertical-align: middle;
-        @apply --settings-section-title-style;
       }
     </style>
     <slot name="title"></slot>
