[MD extensions] focus button on card when returning from sub-page
This CL stores information about the button used to switch to an
extensions sub-page to return focus to that button when returning.

Bug: 784567
Change-Id: Icbe9573b8b9a5357734e71a76f4e6ebe13fea750

--- a/chrome/browser/resources/md_extensions/item.html
+++ b/chrome/browser/resources/md_extensions/item.html
@@ -246,7 +246,7 @@
         </div>
       </div>
       <div id="button-strip" class="layout horizontal center">
-        <div class="layout flex horizontal center">
+        <div class="layout flex horizontal center" id="[[data.id]]">
           <paper-button id="details-button" on-tap="onDetailsTap_">
             $i18n{itemDetails}
           </paper-button>
