--- a/chrome/browser/resources/md_extensions/view_manager.html
+++ b/chrome/browser/resources/md_extensions/view_manager.html
@@ -2,6 +2,7 @@
 
 <link rel="import" href="chrome://resources/html/assert.html">
 <link rel="import" href="chrome://resources/html/cr.html">
+<link rel="import" href="chrome://resources/html/cr/ui/focus_without_ink.html">
 
 <dom-module id="extensions-view-manager">
   <template>
