MD Extensions: Force the toolbar to narrow  mode sooner.
In other WebUIs the toolbar collapses when the window width fallows below 900px.
In MD Extensions, because there is more content on the right of the toolbar, it
needs to collapse sooner.

Bug:788979
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I69617f871918ffcc462834827b116aef8f7ca0bf

--- a/ui/webui/resources/cr_elements/cr_toolbar/cr_toolbar.html
+++ b/ui/webui/resources/cr_elements/cr_toolbar/cr_toolbar.html
@@ -155,7 +155,8 @@
           spinner-active="[[spinnerActive]]"
           showing-search="{{showingSearch_}}">
       </cr-toolbar-search-field>
-      <iron-media-query query="(max-width: 900px)" query-matches="{{narrow}}">
+      <iron-media-query query="(max-width: [[narrowThreshold]]px)"
+          query-matches="{{narrow}}">
       </iron-media-query>
     </div>
 
