--- a/chrome/browser/resources/md_extensions/toolbar.html
+++ b/chrome/browser/resources/md_extensions/toolbar.html
@@ -85,7 +85,8 @@
         search-prompt="$i18n{search}"
         clear-label="$i18n{clearSearch}"
         menu-label="$i18n{mainMenu}"
-        show-menu="[[!isGuest]]" show-search="[[!isGuest]]">
+        show-menu="[[!isGuest]]" show-search="[[!isGuest]]"
+        narrow-threshold="1000">
       <div class="more-actions" hidden$="[[isGuest]]">
         <span id="devModeLabel">$i18n{toolbarDevMode}</span>
         <cr-toggle id="dev-mode" on-change="onDevModeToggleChange_"
