NetworkConfig: Default to autoconnect and show connecting
This CL fixes two minor network config UI issues with
--network-settings-config:

* Adds "Connecting" to the dialog while connecting
* Sets 'AutoConnect' to true unless prohibited by policy
  (matches current UI behavior)

Bug: 380937
Change-Id: I5b58d9080f555431f23eba1ffa0c3806da2a8c63

--- a/chrome/browser/resources/chromeos/internet_config_dialog.html
+++ b/chrome/browser/resources/chromeos/internet_config_dialog.html
@@ -46,6 +46,7 @@
         <div slot="body">
           <network-config id="networkConfig" class="flex"
               networking-private="[[networkingPrivate]]"
+              global-policy="[[globalPolicy_]]"
               network-properties="{{networkProperties_}}"
               enable-connect="{{enableConnect_}}" connect-on-save
               share-allow-enable="[[shareAllowEnable_]]"
