--- a/chrome/browser/resources/settings/internet_page/internet_config.html
+++ b/chrome/browser/resources/settings/internet_page/internet_config.html
@@ -21,6 +21,7 @@
       <div slot="body">
         <network-config id="networkConfig" class="flex"
             networking-private="[[networkingPrivate]]"
+            global-policy="[[globalPolicy]]"
             network-properties="{{networkProperties_}}"
             enable-connect="{{enableConnect_}}" enable-save="{{enableSave_}}"
             share-allow-enable="[[shareAllowEnable_]]"
