--- a/chrome/browser/resources/settings/internet_page/internet_page.html
+++ b/chrome/browser/resources/settings/internet_page/internet_page.html
@@ -132,7 +132,8 @@
     </settings-animated-pages>
 
     <internet-config id="configDialog"
-        networking-private="[[networkingPrivate]]">
+        networking-private="[[networkingPrivate]]"
+        global-policy="[[globalPolicy_]]">
     </internet-config>
 
   </template>
