reload retry error Bug:
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: Ib0bd6eb4bfe74b1da588a9ea78e3396703fee973

--- a/chrome/browser/resources/md_extensions/manager.html
+++ b/chrome/browser/resources/md_extensions/manager.html
@@ -77,7 +77,8 @@
       <extensions-item-list id="items-list" is-guest="[[isGuest_]]"
           delegate="[[delegate]]" in-dev-mode="[[inDevMode]]"
           filter="[[filter]]" hidden$="[[!didInitPage_]]" slot="view"
-          apps="[[apps_]]" extensions="[[extensions_]]">
+          apps="[[apps_]]" extensions="[[extensions_]]"
+          on-load-error="onLoadError_">
       </extensions-item-list>
       <template id="details-view" is="cr-lazy-render">
         <extensions-detail-view delegate="[[delegate]]" slot="view"
