Settings [DICE]: split the account row into its own element
This CL adds new elements to create self-contained sync-account element.
When a profile is DICE-enabled, the original avatar row is hidden,
and this new row will be shown instead.

Despite the new element and layout, the new avatar row will look
similar to the existing one after this CL. The intention is to make it
possible for follow-up CLs to actually change the account sync flow to
achieve the DICE design without affecting the existing avatar row for
non-DICE-enabled profiles.

Bug: 800970
Cq-Include-Trybots: master.tryserver.chromium.linux:closure_compilation
Change-Id: I9325a8d5986d0513e9d63bdac2ee9055823f7eba

--- a/chrome/browser/resources/settings/basic_page/basic_page.html
+++ b/chrome/browser/resources/settings/basic_page/basic_page.html
@@ -24,6 +24,7 @@
 </if>
 
 <if expr="not chromeos">
+<link rel="import" href="../people_page/sync_account_section.html">
 <link rel="import" href="../default_browser_page/default_browser_page.html">
 </if>
 
@@ -92,6 +93,15 @@
       iron-icon {
         -webkit-margin-start: 16px;
       }
+
+      /* This is a special case in which the element's visibility needs to be
+       * determined by its sibling.
+       * TODO(scottchen): If we end up having more than one of these, figure
+       * out a more generic way to select siblings of expanded element.
+       */
+      :-webkit-any(.expanded, .expanding) settings-sync-account-section {
+        display: none;
+      }
     </style>
     <template is="dom-if" if="[[showBasicPage_(
         currentRoute_, inSearchMode, hasExpandedSection_)]]">
@@ -139,7 +149,18 @@
         <template is="dom-if" if="[[showPage_(pageVisibility.people)]]" restamp>
           <settings-section page-title="$i18n{peoplePageTitle}"
               section="people">
-            <settings-people-page prefs="{{prefs}}"></settings-people-page>
+<if expr="not chromeos">
+            <template is="dom-if" if="[[diceEnabled]]">
+              <settings-sync-account-section prefs="{{prefs}}">
+              </settings-sync-account-section>
+            </template>
+</if>
+            <settings-people-page prefs="{{prefs}}"
+<if expr="not chromeos">
+                dice-enabled="[[diceEnabled]]"
+</if>
+                >
+            </settings-people-page>
           </settings-section>
         </template>
         <template is="dom-if" if="[[showPage_(pageVisibility.appearance)]]"
